--- a/css/blog.css
+++ b/css/blog.css
@@ -1,6 +1,7 @@
 /* Basic CSS styling for the Blogilyn, hopefully it'll still be readable on my Pocket PC! */
 
 .entry {
+  margin: auto;
   width: 50%;
 }
 
