--- a/css/blog.css
+++ b/css/blog.css
@@ -9,8 +9,7 @@ body {
   width: 50%;
   border-radius: 16px;
   background-color: maroon;
-  padding: 32px;
-  margin: 5%;
+  padding: 5%;
   text-color: white;
 }
 
