--- a/css/blog.css
+++ b/css/blog.css
@@ -9,7 +9,7 @@ body {
   width: 50%;
   border-radius: 16px;
   background-color: maroon;
-  padding: 5%;
+  padding: 4px;
   text-color: white;
 }
 
