--- a/css/blog.css
+++ b/css/blog.css
@@ -13,15 +13,11 @@ body {
 }
 
 .entry h {
-  padding: 0px;
-  margin: 0px;
-  text-color: white;
+  text-color: darksalmon;
 }
 
 .entry p {
-  padding: 0px;
-  margin: 0px;
-  text-color: white;
+  text-color: darksalmon;
 }
 
 @media only screen and (max-width: 800px) {
