--- a/css/blog.css
+++ b/css/blog.css
@@ -13,16 +13,16 @@ body {
 }
 
 .entry .title {
-  text-color: white;
+  color: white;
   font-size: 24px;
 }
 
 .entry .date {
-  text-color: white;
+  color: white;
 }
 
 .entry .content {
-  text-color: darksalmon;
+  color: darksalmon;
 }
 
 @media only screen and (max-width: 800px) {
