--- a/css/blog.css
+++ b/css/blog.css
@@ -25,8 +25,12 @@ body {
   color: darksalmon;
 }
 
-.entry a:visited {
+.entry a {
   color: limegreen;
+}
+
+.entry a:visited {
+  color: goldenrod;
 }
 
 @media only screen and (max-width: 800px) {
