--- a/css/blog.css
+++ b/css/blog.css
@@ -19,12 +19,13 @@ p {
 .entry .title {
   color: darksalmon;
   font-size: 24px;
+  margin-top: 0.5em;
   margin-bottom: 0px;
 }
 
 .entry .date {
   color: white;
-  margin-top: 0px;
+  margin-top: 4px;
 }
 
 .entry .content {
