--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -1,3 +1,15 @@
+.topbar {
+    width: 50%;
+    position: fixed;
+    z-index: 1;
+    top: 4px;
+    overflow-x: hidden;
+}
+
+.topbar .title {
+    padding: 4px 2px 4px 2px;
+}
+
 p {
     font-family: 'Helvetica', 'Arial', sans-serif;
 }
