--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -9,8 +9,12 @@
 }
 
 .topbar .title {
-    width: 25%;
     padding: 4px 2px 4px 2px;
+}
+
+.topbar a {
+    padding: 4px 2px 4px 2px;
+    display: block;
 }
 
 p {
