--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -1,4 +1,5 @@
 .topbar {
+    width: 100%;
     display: block;
     margin: auto;
     position: fixed;
@@ -12,6 +13,11 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.topbar a {
+    display: inline-block;
+    margin: auto;
 }
 
 p {
