--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -1,23 +1,21 @@
 .topbar {
-    width: 100%;
-    display: block;
+    background-color: #000000;
+    bottom: 0;
     margin: auto;
+    overflow-x: scroll;
     position: fixed;
+    width: 100%;
     z-index: 1;
-    top: 0;
-    overflow-x: hidden;
-    background-color: #FFFFFF;
 }
 
-.topbar .title {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.topbar a {
+.bottombar a {
     display: inline-block;
     margin: auto;
+}
+
+.bottombar .title {
+    display: block;
+    margin-right: auto;
 }
 
 p {
