--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -5,8 +5,13 @@ html body {
 .titlebar {
     position: fixed;
     bottom: 0; /* go to the bottom of our page */
-    width: 100%;
+    left: 0; /* go to the left of our page */
+    width: 10%;
     z-index: 1;
+}
+
+.titlebar img {
+    height: auto;    
 }
 
 .links {
