--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -3,7 +3,7 @@ html body {
 }
 
 .titlebar {
-    position: absolute;
+    position: fixed;
     bottom: 0; /* go to the bottom of our page */
     left: 0; /* go to the left of our page */
     width: 10%;
