--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -4,10 +4,10 @@ html body {
 
 .titlebar {
     position: fixed;
-    bottom: 0; /* go to the bottom of our page */
-    left: 0; /* go to the left of our page */
-    width: 10%;
-    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 15%;
+    height: 100%;
 }
 
 p {
