--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -38,6 +38,7 @@ html, body {
 
 .webilyn-quicklinks a {
     border: 1px solid black;
+    border-left: 2px solid black;
 
     margin: 0;
     padding: 4px;
