--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -47,7 +47,7 @@ html, body {
     text-align: center;
 }
 
-.main {
+.webilyn-main {
     margin-left: 290px;
     margin-top: 2px;
     margin-right: 2px;
