--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -48,10 +48,11 @@ html, body {
 }
 
 .webilyn-quicklinks a {
-    border: 1px solid black;
+    border: 2px solid black;
     border-left: 2px solid black;
+    border-right: 1px solid black;
 
-    margin: 0;
+    margin: 4px;
     padding: 4px;
     
     display: block;
