--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -52,7 +52,7 @@ html, body {
     border-left: 2px solid black;
     border-right: 1px solid black;
 
-    margin: 4px;
+    margin-top: 4px;
     padding: 4px;
     
     display: block;
