--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -7,6 +7,9 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     font-size: 100%;
     vertical-align: baseline;
     background: transparent;
+
+    /* Added this myself, this is the universal font choice of mine. */
+    font-family: 'Helvetica', 'Arial', sans-serif;
 }
 
 html, body {
@@ -71,8 +74,4 @@ html, body {
 .webilyn-main {
     margin-left: 288px;
     padding: 4px;
-}
-
-p, a {
-    font-family: 'Helvetica', 'Arial', sans-serif;
 }
