--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -40,7 +40,7 @@ html, body {
 
     border-bottom: 2px solid black;
     
-    margin-bottom: 34px;
+    margin-bottom: 2px;
     padding: 0;
 
     display: block;
@@ -68,6 +68,12 @@ html, body {
     display: block;
 
     font-size: 12px;
+}
+
+.webilyn-quicklinks h1, .webilyn-quicklinks h2, .webilyn-quicklinks h3, .webilyn-quicklinks h4, .webilyn-quicklinks h5, .webilyn-quicklinks h6 {
+    margin: 2px;
+    
+    display: block;
 }
 
 .webilyn-main {
