--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -76,6 +76,13 @@ html, body {
     display: block;
 }
 
+.webilyn-contactme {
+    bottom: 0;
+    
+    display: block;
+    text-align: center;
+}
+
 .webilyn-main {
     margin-left: 288px;
     padding: 4px;
