--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -77,7 +77,7 @@ html, body {
 }
 
 .webilyn-contactme {
-    position: relative;
+    position: absolute;
     bottom: 0;
     
     display: block;
