--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -107,12 +107,21 @@ html, body {
 }
 
 .webilyn-picture {
-    max-width: 256px;
+    width: 256px;
+    height: 256px;
 
     margin: 0;
     padding: 0;
     
     position: fixed;
     right: 0;
+    bottom: 0;
+}
+
+.webilyn-picture img {
+    max-width: 256px;
+    max-height: 256px;
+
+    position: absolute;
     bottom: 0;
 }
