--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -15,6 +15,11 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 html, body {
     margin: 0;
     padding: 0;
+    background-image: url("resources/images/webilynbackdrop.png");
+}
+
+a, p, h1, h2, h3, h4, h5, h6, ol, ul, il {
+    color: white;
 }
 
 .webilyn-sidebar {
