--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -113,6 +113,10 @@ a, p, h1, h2, h3, h4, h5, h6, ol, ul, il {
     padding: 4px;
 }
 
+.webilyn-main a, .webilyn-main p, .webilyn-main h1, .webilyn-main h2, .webilyn-main h3, .webilyn-main h4, .webilyn-main h5, .webilyn-main h6, .webilyn-main ol, .webilyn-main ul, .webilyn-main il {
+    color: white;
+}
+
 .webilyn-picture {
     width: 256px;
     height: 256px;
