--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -17,7 +17,7 @@ html, body {
     padding: 0;
 }
 
-a, p, h1, h2, h3, h4, h5, h6, ol, ul, il {
+p, h1, h2, h3, h4, h5, h6, ol, ul, il {
     color: white;
 }
 
