--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -116,7 +116,7 @@ a:visited {
 }
 
 .webilyn-main {
-    color: #8f563b;
+    background-color: #8f563b;
     margin-left: 288px;
     margin-right: 288px;
     padding: 4px;
