--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -117,6 +117,9 @@ a:visited {
 
 .webilyn-main {
     background-color: #8f563b;
+
+    height: 100%;
+    
     margin-left: 288px;
     margin-right: 288px;
     padding: 4px;
