--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -118,6 +118,7 @@ a:visited {
 .webilyn-main {
     background-color: #8f563b;
 
+    position: absolute;
     height: 100%;
     
     margin-left: 288px;
