--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -165,3 +165,13 @@ a:visited {
 
     overflow-x: hidden;
 }
+
+@media (max-width: 600px) {
+    .webilyn-sidebar {
+        display: none;
+    }
+    
+    .webilyn-sidebar2 {
+        display: none;
+    }
+}
