--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -176,7 +176,8 @@ a:visited {
     }
 
     .webilyn-main {
-        margin: 0;
+        margin-left: 0;
+        margin-top: 130px;
         
         display: block;
     }
