--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -168,7 +168,7 @@ a:visited {
 
 @media (max-width: 600px) {
     .webilyn-sidebar {
-        display: block;
+        display: none;
     }
 
     .webilyn-quicklinks {
