--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -194,6 +194,8 @@ a:visited {
     .webilyn-main {
         margin: 0;
         width: 100%;
+
+        display: block;
     }
     
     .webilyn-sidebar2 {
