--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -175,28 +175,33 @@ a:visited {
     }
 
     .webilyn-mobilebar {
+        border-bottom: 2px solid black;
+        
         width: 100%;
         height: 128px;
         
-        border-bottom: 2px solid black;
-        
+        position: fixed;
+
         display: block;
     }
 
     .webilyn-mobileiconilyn {
         width: 288px;
         height: 128px;
+        
         padding: 0;
     
         display: block;
     }
 
     .webilyn-main {
-        margin: 0;
         width: 100%;
+        
+        margin: 0;
+
+        position: relative;
 
         display: block;
-        position: relative;
     }
     
     .webilyn-sidebar2 {
