--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -195,9 +195,10 @@ a:visited {
     }
 
     .webilyn-main {
-        width: 100%;
+        width: auto;
         
         margin: 0;
+        margin-top: 130px;
 
         position: relative;
 
