--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -169,6 +169,10 @@ a:visited {
     display: none;
 }
 
+.webilyn-comments {
+    background-color: #8f563b;
+}
+
 @media (max-width: 640px) {
     .webilyn-sidebar {
         display: none;
