--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -171,7 +171,7 @@ a:visited {
 
 .webilyn-comments {
     background-color: #8f563b;
-    border-bottom: 2px;
+    border-bottom: 2px solid black;
 }
 
 @media (max-width: 640px) {
