--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -186,6 +186,7 @@ a:visited {
         height: 128px;
         
         position: fixed;
+        top: 0;
 
         display: block;
     }
@@ -195,8 +196,6 @@ a:visited {
         height: 128px;
         
         padding: 0;
-    
-        display: block;
     }
 
     .webilyn-main {
