--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -186,7 +186,9 @@ a:visited {
         height: 128px;
         
         position: fixed;
+        z-index: 1;
         top: 0;
+        left: 0;
 
         display: block;
     }
