--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -174,6 +174,12 @@ a:visited {
     border-bottom: 2px solid black;
 }
 
+@media (max-width: 960px) {
+    .webilyn-sidebar2 {
+        display: none;
+    }
+}
+
 @media (max-width: 640px) {
     .webilyn-sidebar {
         display: none;
