--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -173,7 +173,7 @@ a:visited {
     height: 382px;
     overflow-y: scroll;
     
-    background-color: #8f563b;
+    background-color: white;
     border-bottom: 2px solid black;
 }
 
