--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -231,7 +231,7 @@ a:visited {
 }
 
 @media (max-height: 639px) {
-    .webilyn-picture img {
+    .webilyn-comments {
         display: none;
     }    
 }
