--- a/resources/css/indexv2.css
+++ b/resources/css/indexv2.css
@@ -170,7 +170,7 @@ a:visited {
 }
 
 .webilyn-comments {
-    height: 382px;
+    height: 50vh;
     overflow-y: scroll;
     
     background-color: white;
