--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,11 @@ p {
   display: block;
 }
 
+.other-sites {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
 .other-sites img {
   display: inline;
 }
